--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,6 +9,9 @@
         "typescript": "^5.3.3"
     },
     "devDependencies": {
+        "@types/node": "^20.10.6",
+        "prisma": "^5.7.1",
+        "ts-node": "^10.9.2",
         "tsc-watch": "^6.0.4",
         "typescript": "^5.3.3"
     },
