--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "@prisma/client": "^5.7.1",
         "ioredis": "^5.3.2",
         "socket.io": "^4.7.3"
     }
