--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@prisma/client": "^5.7.1",
         "ioredis": "^5.3.2",
+        "kafkajs": "^2.2.4",
         "socket.io": "^4.7.3"
     }
 }
